--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <input type="email" class="input_type email" placeholder="Email">
         <input type="tel" class="input_type number" placeholder="Phone_number">
 
-        <a href="https://api.whatsapp.com/send/?phone=5543998055722&text&type=phone_number&app_absent=0"><button class="btn_form" onclick="showEmailUser()">Enviar</button></a>
+        <a href="https://api.whatsapp.com/send/?phone=5543998055722&text&type=phone_number&app_absent=0" target="_blank"><button class="btn_form" onclick="showEmailUser()">Enviar</button></a>
     </form>
 </body>
 </html>
