--- a/index.html
+++ b/index.html
@@ -3,31 +3,20 @@
 <head>
 
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KNMX2VB9');</script>
     <!-- End Google Tag Manager -->
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NQSL34TCQW"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-NQSL34TCQW');
-    </script>
-
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script src='main.js'></script>
 </head>
 <body>
-    
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KNMX2VB9"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -38,7 +27,7 @@
         <input type="email" class="input_type email" id="email" placeholder="Email">
         <input type="tel" class="input_type number" placeholder="Phone_number">
 
-        <a href="https://api.whatsapp.com/send/?phone=5543998055722&text&type=phone_number&app_absent=0" target="_blank"><button class="btn_form" onclick="showEmailUser()">Enviar</button></a>
+        <a href="https://api.whatsapp.com/send/?phone=5543998055722&text&type=phone_number&app_absent=0" target="_blank"><button type="submit" class="btn_form" onclick="showEmailUser()">Enviar</button></a>
     </form>
 </body>
 </html>
